# ROBIT_INTERN_QT_HW

keyboard/: CMakeLists.txt
keyboard/include/: mainwindow.h
keyboard/src/: mainwindow.cpp
keyboard/ui/: mainwindow.ui
robot_arm/: CMakeLists.txt
robot_arm/include/: mainwindow.h
robot_arm/src/: mainwindow.cpp
robot_arm/ui/: mainwindow.ui
